# codesub

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
frontend/: CLAUDE.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  hooks.ts  types.ts
mock_repo/: README.md  advanced_types.py  config.py  models.py  utils.py
mock_repo/.git_template/: COMMIT_EDITMSG  index
mock_repo/api/: __init__.py  routes.py
mock_repo/schemas/: __init__.py  external.py
mock_repo/services/: __init__.py  auth.py  database.py  order.py  payment.py
mock_repos/java/: .gitignore  README.md
mock_repos/python/: config.py  models.py
research/: semantic-code-parsing.md
src/codesub/: __init__.py  api.py  cli.py  config_store.py  detector.py  diff_parser.py  errors.py  git_repo.py  models.py  project_store.py  scan_history.py  update_doc.py  updater.py  utils.py
tasks/: IMPROVEMENTS.md  description.md  plan.md  problem_restatement.md  semantic_subscriptions_research.md
tasks/aggregate-container-tracking/: chat-combined.md  chat-context.txt  plan.md  (+5 more)
tests/: conftest.py  test_advanced_semantic.py  test_api.py  test_api_code_browser.py  test_apply_updates.py  test_cli_integration.py  test_config_store.py  test_container_tracking.py  test_cross_file_movement.py  test_cross_language.py  test_detector_shifts.py  test_detector_triggers.py  test_diff_parser.py  test_git_repo.py  test_inheritance.py  test_java_indexer.py  test_java_semantic_detector.py  test_location_spec.py  test_rename_detection.py  test_semantic.py  test_semantic_detector.py
(+165 files in other folders)
